--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,83 @@
-table {
-    border-collapse: collapse;
-    border: 2px solid rgb(0, 0, 0);
-    font-family: sans-serif;
-    font-size: 0.8rem;
-    letter-spacing: 1px;
-  }
-   caption {
-    caption-side: bottom;
-    padding: 10px;
-    font-weight: bold;
-  }
-   thead,
-  tfoot {
-    background-color: rgb(0, 0, 0);
-  }
-   th,
-  td {
-    border: 1px solid rgb(0 0 0);
-    padding: 8px 10px;
-  }
-   td:last-of-type {
-    text-align: center;
-  }
-   tbody > tr:nth-of-type(even) {
-    background-color: rgb(0, 0, 0);
-  }
-   tfoot th {
-    text-align: right;
-  }
-   tfoot td {
-    font-weight: bold;
-  }
- 
+img { 
+    border-radius: 100%;
+    border: 0.5px solid rgb(0, 0, 0);
+    }
+
+body {
+        background-color: rgb(230, 230, 230);
+        margin: 20;
+        padding: 20;
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+div {
+        width: 1100px;
+        margin: 1.8em ;
+        padding: 3em;
+        background-color: #fdffff;
+        border-radius: 1em;
+        box-shadow: 1px 1px 4px 0px rgba(0,0,0,1.02);
+        }
+
+a:link, a:visited { 
+        color: hsl(229, 100%, 50%);
+        text-decoration: none;
+        }
+
+@media (max-width: 700px) {
+div     { margin: 0 auto; width: auto;}   
+        }
+table   { 
+        border-collapse: collapse;
+        border: 2px solid rgb(0, 0, 0);
+        
+        font-size: 0.9rem;
+        letter-spacing: 1px;
+        width: 45%;
+        }
+
+caption {
+        caption-side: bottom;
+        padding: 10px;
+        font-weight: bold;
+        }
+
+thead,tfoot {
+        background-color: #ffffff;
+        }
+
+th,td   {
+        border: 1.5px solid hsl(0, 0%, 0%);
+        text-align : center;
+        padding: 9px;
+        }
+td:last-of-type {
+        text-align: center;
+        }
+
+tr:nth-child(even) 
+        {
+        background-color: hwb(0 100% 0%);
+        }           
+
+
+        
+.text   {
+        font-size: 2.5rem;
+        font-weight: bold;
+        background: linear-gradient(to right, hwb(65 0% 0%), rgb(0, 255, 4), hwb(177 0% 0%),hwb(256 0% 0%),rgb(255, 0, 234), hwb(0 4% 0%));
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        }
+
+.gradiant-bg{
+        font-size: 72px;
+        font-weight: bold;
+        background: linear-gradient( 45deg, #ffa69e, #faf3dd, #b8f2e6, #aed9e0, #5e6472);
+        background-size: 40%;
+        -webkit-text-fill-color: transparent;
+        animation: gradiant-bg 20s infinite;
+        }
+          
+    
